Runtime exec with pipes